--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ captures/
 *.jks
 
 # Google Services (e.g. APIs or Firebase)
-google-services.json
+app/google-services.json
 
 # Freeline
 freeline.py
