--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,15 @@
 
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:value="@integer/google_play_services_version"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/map_api_key" />
+            android:value="@string/map_api_key"/>
 
-        <activity android:name=".activities.MainActivity">
+        <activity
+            android:name=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,10 +29,10 @@
         </activity>
         <activity
             android:name=".activities.AboutUsActivity"
-            android:label="@string/activity_title_about_us" />
+            android:label="@string/activity_title_about_us"/>
         <activity
             android:name=".activities.PrivacyPolicyActivity"
-            android:label="@string/activity_title_privacy_policy" />
+            android:label="@string/activity_title_privacy_policy"/>
     </application>
 
 </manifest>
