location service implementation refactored

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
             android:value="@string/map_api_key"/>
 
         <activity
-            android:name=".activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -36,10 +35,10 @@
         <activity android:name=".activities.LocationEntryActivity"/>
         <activity
             android:name=".activities.AboutUsActivity"
-            android:label="@string/activity_title_about_us"/>
+            android:label="@string/app_name"/>
         <activity
             android:name=".activities.PrivacyPolicyActivity"
-            android:label="@string/activity_title_privacy_policy"/>
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
