--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0-RC0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC0'
 
+    compile 'org.parceler:parceler-api:1.1.9'
+    annotationProcessor 'org.parceler:parceler:1.1.9'
+
     compile "android.arch.persistence.room:runtime:1.1.0-alpha1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0-alpha1"
 
